# snarkjs-to-aptos

./: Cargo.toml  readme.md
example/: proof.json  verification_key.json
src/: main.rs
