[package]
name = "snarkjs-to-aptos"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive"] }
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
num-bigint = "0.4.4"
serde_json = "1.0.108"
num-traits = "0.2.17"
hex = "0.4.3"
